refactor: change Returns to DTO serviceIMPL