@@ -1,10 +1,12 @@
 package app.security.services;
 
 import app.security.Enum.TypeRole;
+import app.security.MapperDTO.UserMapper;
 import app.security.domain.User;
 import app.security.domain.Workout;
 import app.security.repository.UserRepository;
 import app.security.repository.WorkoutRepository;
+import app.security.types.UserDTO;
 import app.security.types.WorkoutDTO;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -34,18 +36,21 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public User getUserById(Long id) {
+    public UserDTO getUserById(Long id) {
         var user = this.userRepository.getUserById(TypeRole.USER,id);
         log.info("get user {}",user.getUsername());
-        return user;
+        return UserMapper.UserToDTO(user);
+
     }
 
     @Override
-    public List<User> getUsers(int pageNumber) {
+    public List<UserDTO> getUsers(int pageNumber) {
         Pageable page = PageRequest.of(pageNumber -1 ,10);
         log.info("get all Users");
 
-        return this.userRepository.getAllByRoleNameUser(TypeRole.USER,page).stream().collect(Collectors.toList());
+        List<User> users = this.userRepository.getAllByRoleNameUser(TypeRole.USER,page).stream().collect(Collectors.toList());
+
+        return users.stream().map(UserMapper::UserToDTO).toList();
     }
 
     @Override
@@ -80,7 +85,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public User createWorkout(Long userId, WorkoutDTO<?> workout) {
+    public UserDTO createWorkout(Long userId, WorkoutDTO<?> workout) {
         User user = this.userRepository.getUserById(TypeRole.USER,userId);
         Workout workoutEntity = new Workout();
         workoutEntity.setName(workout.name());
@@ -93,11 +98,11 @@ public class UserServiceImpl implements UserService {
         this.userRepository.save(user);
 
 
-        return this.userRepository.getUserById(TypeRole.USER,userId);
+        return UserMapper.UserToDTO(this.userRepository.getUserById(TypeRole.USER,userId));
     }
 
     @Override
-    public User updateWorkout(Long workoutId,Long userId, WorkoutDTO<?> workout) {
+    public UserDTO updateWorkout(Long workoutId,Long userId, WorkoutDTO<?> workout) {
         User user = this.userRepository.getUserById(TypeRole.USER,userId);
         log.info("user here {}" ,user);
         List<Workout> listWorkout = user.getWorkout().stream().toList();
@@ -106,12 +111,13 @@ public class UserServiceImpl implements UserService {
         workoutAlreadyExist.setName(workout.name());
         workoutAlreadyExist.setSeries(workout.series());
         workoutAlreadyExist.setDescription(workout.description());
+        workoutAlreadyExist.setNameOfTeacher(workout.nameOfTeacher());
         workoutAlreadyExist.setWeekday(workout.weekday());
         workoutAlreadyExist.setUpdatedAt(LocalDateTime.now());
         workoutRepository.save(workoutAlreadyExist);
 
-        var userAfterPersist = this.userRepository.getUserById(TypeRole.USER,userId);
+         return UserMapper.UserToDTO(this.userRepository.getUserById(TypeRole.USER,userId));
 
-        return userAfterPersist;
+
     }
 }
